--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -25,7 +25,7 @@
             <h3><span>Soumen Patra</span></h3>
             <button class="btn btn-lg btn-yellow">Hello, Glad to see you here!</button>
             <p>I am a front-end web devloper from Bankura. You can view my works 
-                   <a href="https://github.com/soumen198">here</a>. 
+                   <a href="https://github.com/soumen198/My-Projects">here</a>. 
                     I love to cook food when I'm not cooking any website. 
                      Presently I am undergraduate at 
                     <a href="https://makautwb.ac.in/" target="_blank">Maulana Abul Kalam Azad University of Technology.</a>
