--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,5 +1,5 @@
 <html>
-    <!---  Author - Aditya krishna -->
+    <!---  Author - Soumen Patra -->
     <head>
     
     <title> Soumen Patra | Personal Website</title>
@@ -24,7 +24,7 @@
             </a>
             <h3><span>Soumen Patra</span></h3>
             <button class="btn btn-lg btn-yellow">Hello, Glad to see you here!</button>
-            <p>I am a front-end web devloper from Bankura. You can view my works 
+            <p>I am a front-end web devloper from Jamshedpur. You can view my works 
                    <a href="https://github.com/soumen198/My-Projects">here</a>. 
                     I love to cook food when I'm not cooking any website. 
                      Presently I am undergraduate at 
